Describe how to pass new compiler arguments